# routing-service

./: .gitignore  Cargo.toml  Dockerfile  fly.toml  stress-test.js
api/: Cargo.toml
api/src/: main.rs
cli/: Cargo.toml
cli/src/: generate_file.rs  main.rs
mini-router/: Cargo.toml
mini-router/src/: distance.rs  lib.rs  router.rs  storage.rs  types.rs  util.rs
