[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
kdtree = {version = "0.5.1", features = ["serialize"]}
serde = {version = "1.0.136", features = ["derive"]}
bincode = "1.3.3"
fast_paths = "0.2.0"
mini-router = {path = "../mini-router"}
serde_json = "1.0.59"
indicatif = "0.16.2"
