[package]
name = "mini-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
fast_paths = "0.2.0"
kdtree = {version = "0.5.1", features = ["serialize"]}
serde = {version = "1.0.136", features = ["derive"]}
